# WizzMania

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  ChatItemWidget.cpp  ChatItemWidget.ui  ClientManager.cpp  ClientManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: consigneWizzMania.md
server/: CMakeLists.txt  CMakePresets.json  ClientChatWidget.cpp  ClientChatWidget.ui  ServerManager.cpp  ServerManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
